--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>The music is <a href="https://youtu.be/OP7sTQQ0Blw">"Factory Floor"</a> by <a href="https://twitter.com/zippy731">C. Allen</a>.</p>
     <p>License: <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.en">Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)</a></p>
 
-    <audio src="./Factory Floor.wav" type="audio/wav"></audio>
+    <audio src="./192k Test Pattern.wav" type="audio/wav"></audio>
     <script type="text/javascript" src="./index.js"></script> 
 </body>
 </html>
