--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <h1>Oscillo</h1>
 
     <button data-playing="false" role="switch" aria-checked="false">Play/Pause</button>
-    <input type="range" id="volume" min="0" max="2" value="0.8" step="0.01">
+    <input type="range" id="volume" min="0" max="2" value="1" step="0.01">
     <input type="range" id="intensity" min="0" max="1" value="0.6" step="0.01">
     <input type="range" id="blur" min="0" max="1" value="0.2" step="0.01"><br />
     <canvas width="500" height="500">Oscilloscope Here</canvas>
 
-    <p>The music is <a href="https://youtu.be/OP7sTQQ0Blw">"Factory Floor"</a> by <a href="https://twitter.com/zippy731">C. Allen</a>.</p>
+    <p>Sound by <a href="https://twitter.com/zippy731">C. Allen</a>.</p>
+    <!-- <a href="https://youtu.be/OP7sTQQ0Blw">"Factory Floor"</a> -->
     <p>License: <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.en">Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)</a></p>
 
-    <audio src="./192k Test Pattern.wav" type="audio/wav"></audio>
+    <audio src="./Factory Floor.wav" type="audio/wav"></audio>
     <script type="text/javascript" src="./index.js"></script> 
 </body>
 </html>
