--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- <a href="https://youtu.be/OP7sTQQ0Blw">"Factory Floor"</a> -->
     <p>License: <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.en">Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)</a></p>
 
-    <audio src="./Factory Floor.wav" type="audio/wav"></audio>
+    <audio controls preload="auto" src="./Factory Floor.wav" type="audio/wav"></audio>
     <script type="text/javascript" src="./index.js"></script> 
 </body>
 </html>
