--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <input type="range" id="blur" min="0" max="1" value="0.2" step="0.01"><br />
     <canvas width="500" height="500">Oscilloscope Here</canvas>
 
-    <p>Sound by <a href="https://twitter.com/zippy731">C. Allen</a>.</p>
-    <!-- <a href="https://youtu.be/OP7sTQQ0Blw">"Factory Floor"</a> -->
+    <p>Sound: <a href="https://youtu.be/OP7sTQQ0Blw">"Factory Floor"</a> by <a href="https://twitter.com/zippy731">C. Allen</a>.</p>
     <p>License: <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.en">Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)</a></p>
 
-    <audio controls preload="auto" src="./Factory Floor.wav" type="audio/wav"></audio>
+    <audio controls preload="auto" src="https://media.githubusercontent.com/media/TexicoNotMexico/oscillo/main/Factory%20Floor.wav" crossorigin type="audio/wav"></audio>
     <script type="text/javascript" src="./index.js"></script> 
 </body>
 </html>
