--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Sound: <a href="https://youtu.be/OP7sTQQ0Blw">"Factory Floor"</a> by <a href="https://twitter.com/zippy731">C. Allen</a>.</p>
     <p>License: <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.en">Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)</a></p>
 
-    <audio controls preload="auto" src="https://media.githubusercontent.com/media/TexicoNotMexico/oscillo/main/Factory%20Floor.wav" crossorigin type="audio/wav"></audio>
+    <audio preload="auto" src="https://media.githubusercontent.com/media/TexicoNotMexico/oscillo/main/Factory%20Floor.wav" crossorigin type="audio/wav"></audio>
     <script type="text/javascript" src="./index.js"></script> 
 </body>
 </html>
