--- a/index.html
+++ b/index.html
@@ -9,13 +9,25 @@
 <body>
     <h1>Oscillo</h1>
 
+    <input type="file" id="fileselector" accept=".wav">
+    <br/>
     <button data-playing="false" role="switch" aria-checked="false">Play/Pause</button>
-    <input type="range" id="volume" min="0" max="2" value="1" step="0.01">
-    <input type="range" id="intensity" min="0" max="1" value="0.6" step="0.01">
-    <input type="range" id="blur" min="0" max="1" value="0.2" step="0.01"><br />
+    <br />
+    <label>Gain
+        <input type="range" id="volume" min="0" max="2" value="1" step="0.01">
+    </label>
+    <br />
+    <label>Intensity
+        <input type="range" id="intensity" min="0" max="1" value="0.6" step="0.01">
+    </label>
+    <label>Blur
+        <input type="range" id="blur" min="0" max="1" value="0.2" step="0.01">
+    </label>
+    <br />
+
     <canvas width="500" height="500">Oscilloscope Here</canvas>
 
-    <p>Sound: <a href="https://youtu.be/OP7sTQQ0Blw">"Factory Floor"</a> by <a href="https://twitter.com/zippy731">C. Allen</a>.</p>
+    <p>Initial example music: <a href="https://youtu.be/OP7sTQQ0Blw">"Factory Floor"</a> by <a href="https://twitter.com/zippy731">C. Allen</a>.</p>
     <p>License: <a href="https://creativecommons.org/licenses/by-nc/4.0/deed.en">Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)</a></p>
 
     <audio preload="auto" src="https://media.githubusercontent.com/media/TexicoNotMexico/oscillo/main/Factory%20Floor.wav" crossorigin type="audio/wav"></audio>
