--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Oscillo</h1>
 
-    <input type="file" id="fileselector" accept=".wav">
+    <input type="file" id="fileselector" accept=".wav, .mp3">
     <br/>
     <button data-playing="false" role="switch" aria-checked="false">Play/Pause</button>
     <br />
@@ -18,10 +18,10 @@
     </label>
     <br />
     <label>Intensity
-        <input type="range" id="intensity" min="0" max="1" value="0.6" step="0.01">
+        <input type="range" id="intensity" min="0" max="1" value="0.2" step="0.01">
     </label>
     <label>Blur
-        <input type="range" id="blur" min="0" max="1" value="0.2" step="0.01">
+        <input type="range" id="blur" min="0" max="1" value="0.5" step="0.01">
     </label>
     <br />
 
